[metadata]
license = Apache License 2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Framework :: Django
    Framework :: Django :: 4.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Environment :: Web Environment
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django>=4.2
    Pillow>=10.1.0
    phonenumbers>=8.13.22
    django-phonenumber-field>=7.2.0
    babel>=2.13.0
    django-q2>=1.6.1