[metadata]
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Framework :: Django
    Framework :: Django :: 4.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Environment :: Web Environment
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django>=4.2,<6.0
    Pillow~=10.4
    phonenumbers~=8.13
    django-phonenumber-field~=8.0
    babel~=2.15
    colorama~=0.4
    icalendar~=6.3.1
